# electrocoalescence-simulator

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: ci.yml
include/: ClusterInitializer.h  ComprehensiveExperiment.h  DipoleForceCalculator.h  Droplet.h  DropletInitializer.h  DropletSystem.h  ForceSolver.h  NaiveForceSolver.h  Octree.h  PhysicsConstants.h  TechnicalPlots.h
include/acceleration/: Octree.h  OctreeNode.h
include/core/: Droplet.h  DropletSystem.h  PhysicsConstants.h
include/experiments/: ComprehensiveExperiment.h  TechnicalPlots.h
include/initializers/: ClusterInitializer.h  DropletInitializer.h
include/solvers/: DipoleForceCalculator.h  ForceSolver.h  HonestForceSolver.h  NaiveForceSolver.h  StokesletCalculator.h
src/: ClusterInitializer.cpp  ComprehensiveExperiment.cpp  DropletInitializer.cpp  DropletSystem.cpp  NaiveForceSolver.cpp  Octree.cpp
src/acceleration/: Octree.cpp
src/core/: DropletSystem.cpp
src/experiments/: ComprehensiveExperiment.cpp
src/initializers/: ClusterInitializer.cpp  DropletInitializer.cpp
src/solvers/: HonestForceSolver.cpp  NaiveForceSolver.cpp
tests/: test_physics.cpp
tests/benchmarks/: README.md  benchmark_convection_octree.cpp  benchmark_velocity_analysis.cpp  benchmark_velocity_no_pbc.cpp
tests/integration/: test_convection_demo.cpp  test_pbc_correct.cpp  test_pbc_octree_visual.cpp  verify_convection_formula.cpp
tests/unit/: test_convection.cpp  test_physics.cpp
